app/assets/stylesheets/custom.css
.schedule-title {
  text-align: center;
  margin-bottom: 20px;
}

.schedule-table {
  /*height: 300px;*/
  height: 100%;
  border-style: solid;
  border-width: 1px;
  margin-left: 10px;
  margin-right: 10px;
  overflow: scroll
}

.deploy-history {
  /*height: 300px;*/
  height: 100%;
  border-style: solid;
  border-width: 1px;
  margin-left: 10px;
  overflow: scroll;
  padding-top: 9px;
}

.schedule-container {
  padding-left: 13%;
  height: 400px;
}

.schedule-info {
  padding-left: 4%;
  /*width: 714px;
  padding-left: 10px;*/
}

.deployed {
  margin-top: 10px;
}

.reserved {
  margin-top: 10px;
}

.activity-list {
  list-style: none
}

#cohort-index {
  list-style: none;
}

#cohort-index > li {
  font-size: 25px;
  padding-top: 10px;
}

.cohort-list > ul {
  margin-left: 0px;
  padding-left: 0px;
}

.cohort-list {
  border-style: solid;
  border-width: 1px;
  margin-top: 20px;
}

#cohort-index-title {
  text-align: center;
}

.cohort-btn {
  height: 30px;
  width: 100px;
  margin-left: 29%;
}

ul > #active-cohort-btn:hover {
  color: #ffffff;
  background-color: #9954bb;
  border-color: #9954bb;
}

#add-cohort {
  width: 33%;
}

.cohort-show-btn {
  margin-bottom: 15px;
}

.cohort-warning {
  margin-top: 10%;
  text-align: center;
  font-size: 20px;
}

#sign-in-container {
  margin-top: 10%;
}

#student-index > ul {
  list-style: none;
  padding-left: none;
  font-size: 22px;
}

#student-index > li {
  padding-top: 10px;
  padding-left: none;
  font-size: 22px;
  list-style: none;
}

.btn-file {
    position: relative;
    overflow: hidden;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

html > form > div > button.form-btn {
  height: 43px;
  width: 125px;
}

#add-lab{
  height: 43px;
  width: 125px;
}

#add-activity {
  height: 43px;
  width: 125px;
}

#add-objective {
  height: 43px;
  width: 125px;
}

#remove-activity {
  height: 43px;
  width: 125px;
}

#remove-lab {
  height: 43px;
  width: 125px;
}

